@@ -1,10 +1,15 @@
 
-# Standard compiler parameters
-CFLAGS = -O -I../libmseed
+# Build environment can be configured the following
+# environment variables:
+#   CC : Specify the C compiler to use
+#   CFLAGS : Specify compiler options to use
 
 # Options specific for GCC
 GCC = gcc
 GCCFLAGS = -O2 -Wall -I../libmseed
+
+# Required compiler parameters
+REQCFLAGS = -I../libmseed
 
 BIN = sac2mseed
 
@@ -47,6 +52,10 @@ gcc32debug:
 
 gcc64debug:
 	$(MAKE) "CC=$(GCC)" "CFLAGS=-g -m64 $(GCCFLAGS)"
+
+# Implicit rule for building object files
+%.o: %.c
+	$(CC) $(CFLAGS) $(REQCFLAGS) -c $<
 
 install:
 	@echo
